[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.72"
rustpython-vm = "0.4.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.95", features = ["serde"] }
web-sys = { version = "0.3.50", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
